(doc) update example with tojson_macros

--- a/examples/templates/index.hbs
+++ b/examples/templates/index.hbs
@@ -7,8 +7,7 @@
     <ul>
     {{#each teams}}
       <li class="{{#if @first}}champion{{/if}}">
-      {{log @index}}
-      <b>{{name}}</b>: {{score}}
+      {{@index}}. <b>{{name}}</b>: {{pts}}
       </li>
     {{/each}}
     </ul>
